# agentjail

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml  publish.yml
docs/: DESIGN.md  api.md  architecture.md  ops.md  runners.md  security.md  source-map.md
docs/agent_testing/: 01-sandbox-lifecycle.md  02-ephemeral-run.md  03-exec-and-shell.md  04-filesystem-api.md  05-security-isolation.md  (+4 more)
plan/: 01-sandbox-id-hardening.md  02-dockerfile-restructuring.md  03-remove-proc-bind-mount.md  04-enforce-resource-max-bounds.md  05-limits-and-config-file.md  06-remove-state-endpoint.md  07-static-token-auth.md
service-agentjail/: .gitignore  Dockerfile  default.env  dev.dockerfile  pyproject.toml
service-agentjail/config/: nsjail_default.cfg
service-agentjail/src/agentjail/: __main__.py  cli.py  config.py  server.py  state.py
service-agentjail/src/agentjail/api/: app.py
service-agentjail/src/agentjail/api/routes/: exec.py  filesystem.py  sandbox.py  state.py
service-agentjail/src/agentjail/mcp/: server.py
service-agentjail/src/agentjail/sandbox/: _chroot_exec.py  chroot.py  filesystem.py  manager.py  models.py  nsjail.py
service-agentjail/tests/integration/: conftest.py  helpers.py  test_ephemeral.py  test_exec.py  test_filesystem.py  test_resources.py  test_security.py
service-agentjail/tests/unit/: conftest.py  helpers.py  test_ephemeral.py  test_exec.py  test_filesystem.py  test_read_media.py  test_resource_limits.py  test_resources.py  test_sandbox_lifecycle.py  test_security.py
(+3 files in other folders)
